--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -10,4 +10,22 @@ jobs:
       - name: firstjob script
         shell: bash
         run: Hello World!
-      
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: greetings
+        id: greetings
+        uses: actions/hello-world-javascript-action@main
+        with:
+          who-to-greet: 'Mona the Octocat'
+      - name: time
+        run: |
+          echo "The time of the greeting was at: ${{ steps.greetings.outputs.time }"
+  
+  secondjob:
+    runs-on: ubuntu-latest
+    steps:
+      - name: secondJob script
+        shell: bash
+        run: |
+          echo this is the second job
+          echo and this is a multi-line scrip
