--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -11,15 +11,15 @@ jobs:
         shell: bash
         run: Hello World!
       - name: checkout
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: greetings
         id: greetings
-        uses: action/hello-world-javascript-action@main
+        uses: actions/hello-world-javascript-action@main
         with:
           who-to-greet: 'Mona the Octocat'
       - name: time
         run: |
-          echo "The time of the greeting was at: ${{ steps.greetings.outputs.time }"
+          echo "The time of the greeting was at: ${{ steps.greetings.outputs.time }}"
   
   secondjob:
     runs-on: ubuntu-latest
