--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -23,6 +23,9 @@ jobs:
   
   secondjob:
     runs-on: ubuntu-latest
+    needs: firstjob
+    env:
+      JOB_VAR: " This is a job variable"
     steps:
       - name: secondJob script
         shell: bash
