--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -1,5 +1,7 @@
 name: first workflow
-
+env:
+ WORKFLOW_VAR: "This variable is declared at the workflow level"
+ 
 on:
   workflow_dispatch:
   
@@ -27,8 +29,17 @@ jobs:
     env:
       JOB_VAR: " This is a job variable"
     steps:
+      - name: environment variables
+        env:
+          STEP_VAR: "This variable is declared at the step level"
       - name: secondJob script
         shell: bash
         run: |
-          echo this is the second job
-          echo and this is a multi-line scrip
+         echo $WORKFLOW_VAR
+         echo $JOB_VAR
+         echo $STEP_VAR
+         echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I cant tell you because then it wouldnt be a secret..."
+         echo "The following are default environment variables:"
+         echo $GITHUB_ACTOR
+         echo $GITHUB_JOB
+         echo $GITHUB_REF
