--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -30,16 +30,19 @@ jobs:
       JOB_VAR: " This is a job variable"
     steps:
       - name: environment variables
-        env:
-          STEP_VAR: "This variable is declared at the step level"
-      - name: secondJob script
         shell: bash
         run: |
-         echo $WORKFLOW_VAR
-         echo $JOB_VAR
-         echo $STEP_VAR
-         echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I cant tell you because then it wouldnt be a secret..."
-         echo "The following are default environment variables:"
-         echo $GITHUB_ACTOR
-         echo $GITHUB_JOB
-         echo $GITHUB_REF
+         echo this is the second job
+         echo and this is a multi-line script
+      - name: secondJob script
+        env:
+          STEP_VAR: "This variable is declared at the step level"
+        run: |
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo $STEP_VAR
+          echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I cant tell you because then it wouldnt be a secret..."
+          echo "The following are default environment variables:"
+          echo $GITHUB_ACTOR
+          echo $GITHUB_JOB
+          echo $GITHUB_REF
